formation/11-restrict-api-access/default_external-kube-api__ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-kube-api
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Authorization $http_authorization;
spec:
  ingressClassName: nginx
  rules:
  - host: api.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: kubernetes
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.127.0.0.1.nip.io
    secretName: secure-ingress
